Configurações de login

--- a/repo-sprint3/site/web-data-viz-main/.env.dev
+++ b/repo-sprint3/site/web-data-viz-main/.env.dev
@@ -2,9 +2,9 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
 DB_HOST='localhost'
-DB_DATABASE='aquatech'
-DB_USER='root'
-DB_PASSWORD='admin'
+DB_DATABASE='ondo'
+DB_USER='api'
+DB_PASSWORD='Sptech#2024'
 DB_PORT='3306'
 
 # Configurações do servidor de aplicação
